src/css/components/nav-button-wide.css
/* Desktop */

.nav-primary__button {
  display: none;

  @media (--nav) {
    visibility: hidden;
    display: flex;
    flex-shrink: 0;
    align-items: center;
    justify-content: center;
    width: var(--content-left);
    height: calc(6 * var(--sp));
    border: 0;
    cursor: pointer;
    background-color: var(--color--blue-50);
    outline: 0;

    .js-fixed & {
      visibility: visible;
    }
  }
}

.nav-primary__icon {
  position: relative;
  width: var(--sp2);
  height: 3px;
  background-color: white;
  pointer-events: none;
  transform-style: preserve-3d;
  transition: transform 1s;
  opacity: 0;
  transition: all 0.2s;

  .js-fixed & {
    opacity: 1;
  }

  [aria-expanded="true"] & {
    background-color: transparent;

    &:before {
      top: 0;
      transform: rotate(-45deg);
    }

    &:after {
      top: 0;
      transform: rotate(45deg);
    }
  }

  &:before {
    content: '';
    position: absolute;
    top: -8px;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: white;
    transition: all 0.2s;
  }

  &:after {
    content: '';
    position: absolute;
    top: auto;
    left: 0;
    bottom: -8px;
    height: 100%;
    width: 100%;
    background-color: white;
    transition: all 0.2s;
  }
}

